[metadata]
name = loan
version = 0.0.1
author = Vivien Cabannes
author_email = vivien.cabannes@gmail.com
description = Get loan payment right
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
scripts =
    src/scripts/init_db
    src/scripts/init_timeline
    src/scripts/loan_statement
    src/scripts/timeline_update
packages = find:
python_requires = >=3.6
install_requires = 
    asyncio
    asyncpg

[options.packages.find]
where = src
test = pytest